Enable Kotlin <=> JOML